# HotelAppCleanCodeRepository

./: .env.example  .gitignore  404.html  CNAME  README.md  corregir.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  run_api.py  schema.py
.github/workflows/: docs.yml
api/: index.html
architecture/: index.html
commands/: index.html
docs/: api.md  architecture.md  commands.md  getting-started.md  index.md  persistence.md  reference.md
docs/docs/: api.md  getting-started.md
getting-started/: index.html
interfaces/gui/: streamlit_app.py
persistence/: index.html
reference/: index.html
search/: search_index.json
src/HotelApp/: __init__.py  exceptions.py  models.py  services.py  storage.py
src/HotelApp/api/: __init__.py  main.py
src/HotelApp/api/routers/: __init__.py  hotel.py  rooms.py  user_history.py  users.py
src/HotelApp/app/: api_client.py
src/HotelApp/core/: config.py  supabase_client.py
src/HotelApp/core/exceptions/: user_error.py  user_not_found_error.py
src/HotelApp/exceptions/: __init__.py  invalid_user_data_error.py  user_already_exists_error.py
src/HotelApp/models/: __init__.py  hotel.py  room.py  user.py  user_history.py
src/HotelApp/schemas/: __init__.py  hotel.py  room.py  user.py  user_history.py
src/HotelApp/services/: __init__.py  hotel_service.py  user_services.py
src/HotelApp/storage/: __init__.py  json_storage.py  storage_protocol.py  supabase_storage.py
tests/: test_main.py  test_models.py  test_services.py  test_storage.py
