[project]
name = "hotelappcleancoderepository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "radon>=6.0.1",
    "rich>=14.3.3",
    "streamlit>=1.55.0",
    "supabase>=2.28.3",
    "typer>=0.24.1",
]
